Added HTML structure and simple CSS stylingwith logo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Jeopardy!</title>
 </head>
 <body>
+<header class="header">
+
+		<img id="jeopardy-logo" src="http://vignette2.wikia.nocookie.net/gameshows/images/a/a7/Jeopardy!_Logo.png/revision/latest?cb=20130204000954">
+
+</header>
+<div class="box-container">
+	<div class="categories">
+	<h2 class="category-title">Category</h2>	
+	</div>
+	<div class="answer-boxes">
+		<button class="boxes" id="first-answer">$10</button>
+		<button class="boxes" id="second-answer">$20</button>
+		<button class="boxes" id="third-answer">$30</button>
+		<button class="boxes" id="fourth-answer">$40</button>
+		<button class="boxes" id="fifth-answer">$50</button>
+	</div>
+
+</div>
+
+
+
+
+
 
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
