Saved logo as local file, and began adding minor click functionality response. Also added 'main' and 'footer' sections in HTML

--- a/index.html
+++ b/index.html
@@ -5,34 +5,32 @@
 	<title>Jeopardy!</title>
 </head>
 <body>
-<header class="header">
+	<header class="header">
+		<img id="jeopardy-logo" src="images/Jeopardy!_Logo.png">
+		<h2 class="scoreboard">Score: </h2>
+	</header>
+	<main class="game-board">
+		<div class="box-container">
+			<div class="categories">
+			<h2 class="category-title">Category</h2>	
+			</div>
+			<div class="answer-boxes">
+				<button type="button" class="boxes" id="first-answer">$10</button>
+				<button class="boxes" id="second-answer">$20</button>
+				<button class="boxes" id="third-answer">$30</button>
+				<button class="boxes" id="fourth-answer">$40</button>
+				<button class="boxes" id="fifth-answer">$50</button>
+			</div>
+		</div>
 
-		<img id="jeopardy-logo" src="http://vignette2.wikia.nocookie.net/gameshows/images/a/a7/Jeopardy!_Logo.png/revision/latest?cb=20130204000954">
-
-</header>
-<div class="box-container">
-	<div class="categories">
-	<h2 class="category-title">Category</h2>	
-	</div>
-	<div class="answer-boxes">
-		<button class="boxes" id="first-answer">$10</button>
-		<button class="boxes" id="second-answer">$20</button>
-		<button class="boxes" id="third-answer">$30</button>
-		<button class="boxes" id="fourth-answer">$40</button>
-		<button class="boxes" id="fifth-answer">$50</button>
-	</div>
-
-</div>
-
-
-
-
-
-
+	</main>
+	<footer class="footer">
+	<div class="response-field"></div>
+	</footer>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-<script src="main.js"></script>
+<script src="javascript/main.js"></script>
 </body>
 </html>
