--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!-- Bootstrap Compiled and minified CSS CDN -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 <!-- Materialize Compiled and minified CSS CDN -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 <!-- Local CSS -->
@@ -14,89 +14,19 @@
 		<img id="jeopardy-logo" src="images/Jeopardy!_Logo.png">
 		<h2 class="scoreboard">Score: </h2>
 	</header>
-<main class="game-board">
-		<div class="box-container">
-			<div class="categories">
-			<h2 class="category-title">Category</h2>	
-			</div>
-			<div class="answer-boxes">
-	<!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn" href="#modal1">First</a>
-  <!-- Modal Structure -->
-<div id="modal1" class="modal">
-<div class="modal-content">
-  <h4>Modal Header</h4>
-  <p>A bunch of text</p>
-</div>
-<div class="modal-footer">
-  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-</div>
-</div>
-	<!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn" href="#modal1">Second</a>
-  <!-- Modal Structure -->
-<div id="modal1" class="modal">
-<div class="modal-content">
-  <h4>Modal Header</h4>
-  <p>A bunch of text</p>
-</div>
-<div class="modal-footer">
-  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-</div>
-</div>
-	<!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn" href="#modal1">Third</a>
-  <!-- Modal Structure -->
-<div id="modal1" class="modal">
-<div class="modal-content">
-  <h4>Modal Header</h4>
-  <p>A bunch of text</p>
-</div>
-<div class="modal-footer">
-  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-</div>
-</div>
-	<!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn" href="#modal1">Fourth</a>
-  <!-- Modal Structure -->
-<div id="modal1" class="modal">
-<div class="modal-content">
-  <h4>Modal Header</h4>
-  <p>A bunch of text</p>
-</div>
-<div class="modal-footer">
-  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-</div>
-</div>
-	<!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn" href="#modal1">Fifth</a>
-  <!-- Modal Structure -->
-<div id="modal1" class="modal">
-<div class="modal-content">
-  <h4>Head</h4>
-  <p>A bunch of text</p>
-</div>
-<div class="modal-footer">
-  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-</div>
-</div>
-			</div>
-		</div>
 
-	</main>
-	<footer class="footer">
-		<div class="response-field"></div>
-	</footer>
+
 <!-- jQuery CDN -->
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-<!-- Bootstrap compiled and minified JavaScript CDN -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!-- Materialize compiled and minified JavaScript CDN -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 <!-- Local JavaScript -->
 <script src="javascript/main.js"></script>
+<!-- Materialize compiled and minified JavaScript CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+
+<!-- Bootstrap compiled and minified JavaScript CDN -->
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 </body>
 </html>
