Deleted Materialize CSS and JS CDNs -- Didn't need them. Added a scoreboard function that updates based on the amount of points awarded.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Materialize Compiled and minified CSS CDN -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 <!-- Local CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Jeopardy!</title>
@@ -10,7 +8,7 @@
 <body>
 	<header class="header">
 		<img id="jeopardy-logo" src="images/Jeopardy!_Logo.png">
-		<h2 class="scoreboard">Score: </h2>
+		<h2 id="scoreboard">Score: 0</h2>
 	</header>
 
 
@@ -21,8 +19,5 @@
   crossorigin="anonymous"></script>
 <!-- Local JavaScript -->
 <script src="javascript/main.js"></script>
-<!-- Materialize compiled and minified JavaScript CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-
 </body>
 </html>
