--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Font: Coustard: 900 -->
+	<link href="https://fonts.googleapis.com/css?family=Coustard:900" rel="stylesheet">
 <!-- Local CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Jeopardy!</title>
